@@ -777,6 +777,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 5195) rebuildrecentchanges.php works again; Database::insertSelect now
   has a parameter for select options.
 * Fix updateSearchIndex.php for new schema
+* Fix bogus "filename too short" error when uploading files with a period in the base
+  name, e.g. "Mr. Zee.png"
 
 
 === Caveats ===
